<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="login">Login</string>
    <string name="userid">UserID</string>
    <string name="password">Password</string>
    <string name="loginUA">LOGIN</string>
    <string name="_00_00">00.00</string>
    <string name="signin">SignIn</string>
    <string name="button">Button</string>
    <string name="play">Play</string>
    <string name="songnme1"></string>
    <string name="song">Song</string>
    <string name="artist1"></string>
    <string name="textview">TextView</string>
    <string name="navigation_drawer_close" />
    <string name="navigation_drawer_open" />
    <string name="songname2"></string>
    <string name="artist2"></string>
    <string name="songnme3"></string>
    <string name="artist3"></string>
    <string name="songnme4"></string>
    <string name="artist4"></string>
    <string name="songnme5"></string>
    <string name="artist5"></string>
    <string name="songnme6"></string>
    <string name="artist6"></string>

    <string name="enter_admin_id">Enter Admin ID</string>
    <string name="enter_admin_email">Enter Admin Email</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="add">ADD</string>
    <string name="add_admin">Add Admin</string>
    <string name="view_songs">View Songs</string>
    <string name="enter_userid">Enter UserID</string>
    <string name="delete_user">Delete User</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="submit_update">Submit Update</string>
    <string name="update_password_new">Update Password</string>


</resources>
